fix buttons overflow

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -1139,3 +1139,6 @@ span.ant-tag
 	max-height: 64px
 	height: auto
 	width: auto
+
+.mt-2-5
+	margin-top: 10px
